--- a/html/cmd.html
+++ b/html/cmd.html
@@ -24,7 +24,7 @@
          <h3 id="rt-1">Приложения и процессы</h3>
          <ul>
             <li>TASKLIST – Список выполняемых задач</li>
-            <li>TASKKILL – Остановить или прекратить выполнение задачи (для остановки задачи используется PID, который можно узнать из TASKLIST).</li>
+            <li>PID – Остановить или прекратить выполнение задачи (для остановки задачи используется PID, который можно узнать из TASKLIST).</li>
          </ul>
          <h3 id="rt-3">Системная информация</h3>
          <ul>
