--- a/html/cmd.html
+++ b/html/cmd.html
@@ -15,6 +15,7 @@
          <p class="subtitle">Командная строка Windows</p>
          <h3 id="rt-0"> Управление файлами и папками</h3>
          <ul>
+            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>COPY – Копирование файлов в другое место</li>
             <li>DIR – Изменить каталог</li>
             <li>CD – Отображение файлов и папок в текущем каталоге</li>
@@ -37,6 +38,9 @@
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
+         <p class="location" align="center">
+            <a href="cmd.html">Вернуться на главную</a> 
+         </p>    
          &copy; 2024. SkyPro
       </footer>
    </body>
