--- a/html/mac.html
+++ b/html/mac.html
@@ -3,7 +3,7 @@
    <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Терминал MaOS</title>
+      <title>Терминал MacOS</title>
       <link rel="stylesheet" type="text/css" href="../css/style.css">
       <link rel="stylesheet" type="text/css" href="../css/font-awesome.css">
       <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon">
