--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
             <a href="html/mac.html">Терминал MacOS</a>
          </p>
           <p class="location" align="center">
-            <a href="git.html">Git</a>
+            <a href="git.html">Git - всему голова!</a>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
+         <p class="location" align="center">
+            <a href="index.html">Вернуться на главную</a> 
+         </p>    
          &copy; 2024. SkyPro
       </footer>
    </body>
