--- a/html/cmd.html
+++ b/html/cmd.html
@@ -17,20 +17,20 @@
          <ul>
             <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
             <li>COPY – Копирование файлов в другое место</li>
-            <li>DIR – Изменить каталог</li>
-            <li>CD – Отображение файлов и папок в текущем каталоге</li>
+            <li>DIR – Вывести список файлов и папок в текущей директории</li>
+            <li>CD – Переместиться между папками</li>
             <li>MAKEDIR – Создать папку</li>
             <li>MOVE – Переместить файлы из одной папки в другую</li>
          </ul>
          <h3 id="rt-1">Приложения и процессы</h3>
          <ul>
             <li>TASKLIST – Список выполняемых задач</li>
-            <li>PID – Остановить или прекратить выполнение задачи (для остановки задачи используется PID, который можно узнать из TASKLIST).</li>
+            <li>TASKLIST – Остановить или прекратить выполнение задачи (для остановки задачи используется PID, который можно узнать из TASKLIST).</li>
          </ul>
          <h3 id="rt-3">Системная информация</h3>
          <ul>
-            <li>DATE – Выводит или устанавливает системное время</li>
-            <li>TIME – Выводит или устанавливает текущую дату</li>
+            <li>DATE – выводит или устанавливает текущую дату</li>
+            <li>TIME – Выводит или устанавливает системное время</li>
             <li>HOSTNAME – Отображает имя компьютера</li>
             <li>SYSTEMINFO – Отображает информацию о конфигурации компьютера</li>
             <li>VER – Позволяет просмотреть версию Windows</li>
@@ -39,7 +39,7 @@
       <!--footer-->
       <footer class="animated fadeIn">
          <p class="location" align="center">
-            <a href="cmd.html">Вернуться на главную</a> 
+            <a href="html/cmd.html">Вернуться на главную</a> 
          </p>    
          &copy; 2024. SkyPro
       </footer>
