--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
          <div class="name">
             Основные Инструменты
          </div>
-         <p class="subtitle">Тетирование WEB-приложений</p>
-         </p>
+         <p class="subtitle">Тестирование WEB-приложений</p>
          <p class="location" align="center">
             <a href="html/cmd.html">Командная строка Windows</a>
          </p>
@@ -26,7 +25,8 @@
             <a href="html/mac.html">Терминал MacOS</a>
          </p>
           <p class="location" align="center">
-            <a href="git.html">Git - всему голова!</a>
+            <a href="html/git.html">Git - всему голова!</a>
+          </p>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
